--- a/index.html
+++ b/index.html
@@ -4,12 +4,17 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>IG Feed</title>
-        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">        <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" 
+            href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" 
+            integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" 
+            crossorigin="anonymous">        
         <link href="https://fonts.googleapis.com/css2?family=Abel&display=swap" rel="stylesheet"> 
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.13.0/css/all.css" integrity="sha384-Bfad6CLCknfcloXFOyFnlgtENryhrpZCe29RTifKEixXQZ38WheV+i/6YWSzkz3V" crossorigin="anonymous">
+        <link rel="stylesheet" href="style.css">
+
     </head>
     <body>
-        <nav class="navbar navbar-light bg-light">
+        <nav class="navbar navbar-light bg-light border-bottom mb-2">
             <a class="navbar-brand">
                 <i class="fas fa-camera-retro"></i>
                 PhotoFeed
@@ -38,11 +43,13 @@
                     </div>
                 </div>
 
-            </div>                
+            </div> 
+                <!--Dropdown Button-->               
                 <div class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                         <i class="fas fa-cog"></i>                    
                     </a>
+                <!--Dropdown Content-->               
                     <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
                         <a class="dropdown-item" href="#">Action</a>
                         <a class="dropdown-item" href="#">Another action</a>
@@ -51,8 +58,178 @@
                 </div>
             </div>
         </nav>    
-    
-    <h1>Feed</h1>
+        <!--Tab Buttons--> 
+        <!--CAMBIAAR COLOR DE BOTONES--> 
+        <ul class="nav nav-pills mb-3 border-0 justify-content-center" id="myTab" role="tablist">
+            <li class="nav-item " role="presentation">
+                <a class="nav-link active " id="home-tab" data-toggle="tab" href="#photos" role="tab" aria-controls="home" aria-selected="true">Photos</a>
+            </li>
+            <li class="nav-item" role="presentation">
+                <a class="nav-link" id="profile-tab" data-toggle="tab" href="#posts" role="tab" aria-controls="profile" aria-selected="false">Posts</a>
+            </li>
+        </ul>
+        <!--Tab's Content-->               
+        <div class="tab-content" id="myTabContent">
+            <div class="tab-pane fade show active  d-flex justify-content-center" id="photos" role="tabpanel" aria-labelledby="home-tab">
+                <div class="row row-cols-1 row-cols-md-3 mx-auto">                   
+                    <!--Card Forest-->
+                    <div class="col mb-4">
+                        <div class="card shadow px-0">
+                            <div class="card-body px-0">
+                                <div class="card-title d-flex align-items-center card-content">
+                                    <i class="fab fa-suse fa-lg mr-2"></i>
+                                    <h4>Just the forest</h4>
+                                </div>
+                                <img class="image" src="https://images.pexels.com/photos/5580663/pexels-photo-5580663.jpeg?auto=compress&cs=tinysrgb&dpr=3&h=750&w=1260" alt="Picture">            
+                                <div class="buttons d-flex card-content py-3">
+                                    <div class="d-inline-flex">
+                                        <i class="far fa-heart fa-lg space"></i>
+                                        <i class="far fa-comment fa-lg space"></i>
+                                        <i class="far fa-paper-plane fa-lg"></i>
+                                    </div>
+                                    <i class="far fa-bookmark fa-lg ml-auto"></i>
+                                </div>
+                                <div class="card-text card-content">
+                                <b>Sergio</b> 
+                                "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. 
+                                </div>
+                            </div>
+                        </div>
+                    </div>    
+                    <!--Card Ocean Video-->
+                    <div class="col mb-4">
+                        <div class="card shadow px-0">
+                            <div class="card-body px-0">
+                                <div class="card-title d-flex align-items-center card-content">
+                                    <i class="fab fa-suse fa-lg mr-2"></i>
+                                    <h4>Seashore video</h4>
+                                </div>
+                                <video class="image" height=inherit autoplay loop>
+                                <source src="https://player.vimeo.com/external/284652268.sd.mp4?s=0bf23f0d69280b20e39fb2dd5501a5b0d4612a77&profile_id=164&oauth2_token_id=57447761" type="video/mp4">
+                                    <div class="image">Your browser does not support the video tag.</div>
+                                </video>                                 
+                                <div class="buttons d-flex card-content py-3">
+                                    <div class="d-inline-flex">
+                                        <i class="far fa-heart fa-lg space"></i>
+                                        <i class="far fa-comment fa-lg space"></i>
+                                        <i class="far fa-paper-plane fa-lg"></i>
+                                    </div>
+                                    <i class="far fa-bookmark fa-lg ml-auto"></i>
+                                </div>
+                                <div class="card-text card-content">
+                                <b>Sergio</b> 
+                                "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. 
+                                </div>
+                            </div>
+                        </div>
+                    </div>    
+                    <!--Card Bakery-->
+                    <div class="col mb-4">
+                        <div class="card shadow px-0">
+                            <div class="card-body px-0">
+                                <div class="card-title d-flex align-items-center card-content">
+                                    <i class="fab fa-suse fa-lg mr-2"></i>
+                                    <h4>Walk on the beach with max!</h4>
+                                </div>
+                                <img class="image" src="https://images.pexels.com/photos/3671311/pexels-photo-3671311.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500" alt="Picture">            
+                                <div class="buttons d-flex card-content py-3">
+                                    <div class="d-inline-flex">
+                                        <i class="far fa-heart fa-lg space"></i>
+                                        <i class="far fa-comment fa-lg space"></i>
+                                        <i class="far fa-paper-plane fa-lg"></i>
+                                    </div>
+                                    <i class="far fa-bookmark fa-lg ml-auto"></i>
+                                </div>
+                                <div class="card-text card-content">
+                                <b>Sergio</b> 
+                                "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. 
+                                </div>
+                            </div>
+                        </div>
+                    </div>                       
+                    <!--Card City Video -->
+                    <div class="col mb-4">
+                        <div class="card shadow px-0">
+                            <div class="card-body px-0">
+                                <div class="card-title d-flex align-items-center card-content">
+                                    <i class="fab fa-suse fa-lg mr-2"></i>
+                                    <h4>City @ Night</h4>
+                                </div>
+                                <video class="image" height=inherit autoplay loop>
+                                <source src="https://player.vimeo.com/external/303953174.sd.mp4?s=44c6628c9ddb0932b487538254ed624e483d9890&profile_id=164&oauth2_token_id=57447761" type="video/mp4">
+                                    <div class="image">Your browser does not support the video tag.</div>
+                                </video>                                 
+                                <div class="buttons d-flex card-content py-3">
+                                    <div class="d-inline-flex">
+                                        <i class="far fa-heart fa-lg space"></i>
+                                        <i class="far fa-comment fa-lg space"></i>
+                                        <i class="far fa-paper-plane fa-lg"></i>
+                                    </div>
+                                    <i class="far fa-bookmark fa-lg ml-auto"></i>
+                                </div>
+                                <div class="card-text card-content">
+                                <b>Sergio</b> 
+                                "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. 
+                                </div>
+                            </div>
+                        </div>
+                    </div>    
+                    <!--Card Cliff-->
+                    <div class="col mb-4">
+                        <div class="card shadow px-0">
+                            <div class="card-body px-0">
+                                <div class="card-title d-flex align-items-center card-content">
+                                    <i class="fab fa-suse fa-lg mr-2"></i>
+                                    <h4>Living on the edge... of the cliff</h4>
+                                </div>
+                                <img class="image" src="https://images.pexels.com/photos/1659435/pexels-photo-1659435.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500" alt="Picture">            
+                                <div class="buttons d-flex card-content py-3">
+                                    <div class="d-inline-flex">
+                                        <i class="far fa-heart fa-lg space"></i>
+                                        <i class="far fa-comment fa-lg space"></i>
+                                        <i class="far fa-paper-plane fa-lg"></i>
+                                    </div>
+                                    <i class="far fa-bookmark fa-lg ml-auto"></i>
+                                </div>
+                                <div class="card-text card-content">
+                                <b>Sergio</b> 
+                                "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. 
+                                </div>
+                            </div>
+                        </div>
+                    </div>    
+                    <!--Card Sunset-->
+                    <div class="col mb-4">
+                        <div class="card shadow px-0">
+                            <div class="card-body px-0">
+                                <div class="card-title d-flex align-items-center card-content">
+                                    <i class="fab fa-suse fa-lg mr-2"></i>
+                                    <h4>Sunset at the beach</h4>
+                                </div>
+                                <img class="image" src="https://images.pexels.com/photos/1024973/pexels-photo-1024973.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500" alt="Picture">            
+                                <div class="buttons d-flex card-content py-3">
+                                    <div class="d-inline-flex">
+                                        <i class="far fa-heart fa-lg space"></i>
+                                        <i class="far fa-comment fa-lg space"></i>
+                                        <i class="far fa-paper-plane fa-lg"></i>
+                                    </div>
+                                    <i class="far fa-bookmark fa-lg ml-auto"></i>
+                                </div>
+                                <div class="card-text card-content">
+                                <b>Sergio</b> 
+                                "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. 
+                                </div>
+                            </div>
+                        </div>
+                    </div>    
+
+                </div>
+            </div>
+            <div class="tab-pane fade" id="posts" role="tabpanel" aria-labelledby="profile-tab">
+
+sdfsdf
+            </div>                
+        </div>
     
     </body>
     <!--Modal Script-->  
@@ -60,14 +237,14 @@
         integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
         crossorigin="anonymous">
     </script>
-    <!--Modal Script-->  
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
-        integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
-        crossorigin="anonymous">
-    </script>
-    <!--Modal Script-->  
+    <!--Tabs Script-->  
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"
         integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI"
+        crossorigin="anonymous">
+    </script>
+    <!--Other Script-->  
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+        integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
         crossorigin="anonymous">
     </script>
 </HTMl>
